<resources>
    <string name="app_name">LogIn</string>
    <string name="text_agree">I agree all statements in</string>
    <string name="text_terms">terms of service</string>
    <string name="web_terms">https://policies.google.com/terms?hl=en-US</string>
    <string name="txt_member">I\'m already a member</string>
    <string name="full_name">FULL NAME</string>
    <string name="hint_name">Enter your full name</string>
    <string name="pwd">PASSWORD</string>
    <string name="hint_pwd">***********</string>
    <string name="edit_email">E-MAIL</string>
    <string name="hint_email">Your e-mail goes here</string>
    <string name="title_activity_registration">Registration</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_successful">Successful</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="terms"><a href="https://policies.google.com/terms?hl=en-US"> terms of service </a></string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>