<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bckgrng"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/reg_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_sign_in"
        android:text="Sign In"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/reg_up"
        app:layout_constraintTop_toTopOf="@+id/reg_up" />

    <Button
        android:id="@+id/reg_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_sign_up"
        android:backgroundTint="#4C516D"
        android:text="Sign Up"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="96dp"
        android:clickable="true"
        android:text="Sign In"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_in" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:textColor="#DEE4E7"
        android:text=" or "
        android:textSize="36dp"
        app:layout_constraintStart_toEndOf="@+id/text_sign_in"
        app:layout_constraintTop_toTopOf="@+id/text_sign_in" />

    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:textSize="36dp"
        android:text="Sign Up"
        android:textColor="#DEE4E7"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/or"
        app:layout_constraintTop_toTopOf="@+id/text_sign_in" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/full_name"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/text_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/text_sign_in" />

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:textColorHint="#DEE4E7"
        android:textColor="@color/edit_color"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/pwd"
        android:textColor="@color/text_color"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/reg_name"
        app:layout_constraintTop_toBottomOf="@+id/reg_name" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_pwd"
        android:inputType="textPassword"
        android:textColorHint="#DEE4E7"
        android:textColor="@color/edit_color"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/btn"
        android:text="Sign In"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/reg_password"
        app:layout_constraintTop_toBottomOf="@+id/reg_password" />

</androidx.constraintlayout.widget.ConstraintLayout>